--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário - JS</title>
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,31 +48,6 @@
 
             <button type="submit" class="btn">Enviar</button>
         </form>
-
-        <!-- <div class="form">
-            <div class="nome-formulario">
-                <input type="text" name="nome-completo" id="nome-completo" placeholder="Nome Completo *" class="input nome">
-                <p class="obrigatorio-1">preencha todas as infos*</p>
-            </div>
-
-            <div class="email-formulario">
-                <input type="text" name="email" id="email" placeholder="Email *" class="input email">
-                <p class="obrigatorio-2">preencha todas as infos*</p>
-            </div>
-
-            <div class="telefone-formulario">
-                <input type="text" name="telefone" id="telefone" placeholder="Telefone *" class="input telefone">
-                <p class="obrigatorio-3">preencha todas as infos*</p>
-            </div>
-
-            <div class="mensagem-formulario">
-                <input type="text" name="mensagem" id="mensagem" placeholder="Mensagem *" class="input mensagem tam-mensagem">
-                <p class="obrigatorio-4">preencha todas as infos*</p>
-                <p>*campos obrigatórios</p>
-            </div>
-            
-
-            <button type="submit" class="btn" onclick="clicarBotao()">Enviar</button> -->
 
         </div>
     </main>
